# exchange_rate_bot

./: .env.example  README.md  pyproject.toml
currencybot/: __main__.py  config.py
currencybot/handlers/: exchange_rate.py  introduction.py
currencybot/structures/: api.py
currencybot/structures/keyboards/: currencies.py
